public/css/futureed-client.css
/* ... */
.report-progress {
	height: 15px;
	margin-bottom: 0px;
	overflow: hidden;
	background-color: #FFFFff;
	border-radius: 4px;
	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
	box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
	width: auto;
	margin: 2px auto;
}

.report-progress-bar {
	float: left;
	width: 0;
	height: 100%;
	font-size: 12px;
	line-height: 20px;
	color: #fff;
	text-align: center;
	background-color: #337ab7;
	-webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
	box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
	-webkit-transition: width .6s ease;
	-o-transition: width .6s ease;
	transition: width .6s ease;
}

.report-progress-bar-success {
	background-color: #5cb85c;
}

/*parent - student reports*/
.reports h3 {
	margin-top: 0;
	color: #03658A;
}

.reports .student-search {
	padding:15px 0;
	margin-bottom: 20px;
	background-color: #f6f4f5;
}

.reports .student-search select{
	width: 200px;
	margin:0 auto;
}

/*reporting tabs*/

.reports .nav-student {
    border-bottom: none;
    margin-bottom: 0;
}

.reports .nav-student li {
	width: 126.5px;
}

.reports .nav-student li a {
	border:1px solid #dcdcdc;
	border-bottom: none;
	padding: 6px 8px;
	border-radius: 5px;
}

.reports .nav-pills>li>a{
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
	text-align: center;
	font-size: 11px;
}

.pill-gold-report>li.active>a, .pill-gold-report>li.active>a:focus, .pill-gold-report>li.active>a:hover {
	background-color: #DFC100;
}

.reports .form-search{
	border: none;
	border-radius: 0;
	padding: 5px 15px;
}

/*current learning tab*/
.current-learning .table > tbody > tr > td {
	padding: 2px;
	border:none;
}
.current-learning .table th{
	background-color: #A92147;
	color: #fff;
}
.column-curriculum-category {
	width: 40%;
}
.reports .progress-container {
	border:1px solid #ddd;
	padding: 0 5px 20px;
	overflow: auto;
}

.reports .progress-container .row{
	margin: 0 auto;
}

.reports .progress-container h3 {
	color:#337ab7;
	margin:15px 0;
}

.reports .progress-container .progress-item-container {
	padding-left: 0px;
	padding-right: 8px;
	width: 126px;
}

.reports .progress-container .progress-item-container:last-child {
	padding-right: 0;
}

.reports .progress-container .progress-item-container .progress-item {
	background: #F9F9F9;
	border:1px solid #F3F3F3;
	padding:10px;
	text-align: center;
	border-radius: 5px;
	height: 110px;
}

.reports .progress-container .progress-item-container .progress-item p {
	margin: 5px 0 0;
	color:#337ab7;
	font-size: 12px;
}

.circle {
	width: 55px;
	height: 55px;
	border: 5px solid #E9CC45;
	background: #DDBE0E;
	-moz-border-radius: 50px;
	-webkit-border-radius: 50px;
	border-radius: 50px;
	margin:auto;
	vertical-align: middle;
	font-size: 15px;
	padding-top:15px;
	color: #fff;
}

/*summary progress tab*/
.reports-container .progress {
	height: 25px;
	width: 203px;
	margin: 10px 0px;
}

.reports-container .progress-holder {
	display: inline-block;
	margin: 10px;
}

.progress-key {
	color: #0E79A3;
	font-size: 14px;
	margin-bottom: 0px;
}

.ongoing-legend, .success-legend, .not-started-legend {
	font-size: 14px;
	margin: 10px 0px;
}

.not-started-legend:before {
	content: " ";
	background-color: #f5f5f5;
	padding: 0px 10px;
	margin-right: 10px;
	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
	box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
	border-radius: 5px;
}

.ongoing-legend:before {
	content: " ";
	background-color: #f0ad4e;
	padding: 0px 10px;
	margin-right: 10px;
	border: 1px solid #FFB64E;
	border-radius: 5px;
}

.success-legend:before {
	content: " ";
	background-color: #5cb85c;
	padding: 0px 10px;
	margin-right: 10px;
	border: 1px solid #38AB30;
	border-radius: 5px;
}

.alert-success, .alert-error {
	margin-bottom: 15px;
}

.alert-success{
	margin-left: 0 !important;
}

.report-card-container img {
	margin: 17px 40px;
	border-radius: 50%;
}

/*subject-area tab*/
.subject-area .table {border-top:none;}


/*Export Report*/
.export-table {
	margin-bottom: 0px;
	width: 100%;
	margin: 0px 0px 0px 0px;
	border-collapse: collapse;
}

.export-table > tbody > tr > td {
	padding: 15px;
}

.export-table-bordered td, .export-table-bordered th {
	border: 1px solid #ddd !important;
}

.export-table-bordered th{
	padding:15px;
}
.export-header, .export-sub-header {
	color: #055a7f;
}
.export-header {
	text-align: center;
}
.export-table .class-report th{
	width: 200px;
}

.table-space {
	margin-top: 20px;
}

.export-body {
	width: 100%;
	margin: 0;
	border-collapse: collapse;
	font-size: 12px;
}

.export-body > tbody > tr > td, .export-body th{
	padding: 8px;
}

.export-row {
	line-height: 16px;
}

/*dashboard export button area*/
.client-export-button-container {
	margin-bottom:20px;
}

.client-export-button-container .export-buttons button{
	border-radius: 3px !important;
}

.client-export-button-container .export-buttons .dropdown-menu{
	min-width: 100px;
	text-align: center;
}

/* Parent Dashboard Content Button */

.dashboard-content-btn button {
	text-transform: capitalize;
	color: #6496c8;
	text-decoration: none;
	font-weight: 200;
	font-size:13px;
	padding: 15px;
	background: rgba(0,0,0,0);
	border-radius: 10px;
	border: solid 2px #6496c8;
	word-spacing: 2px;
	width: 80%;
}

.dashboard-content-btn .subscribe-button {
	background-color: #03658A;
	font-size: 30px;
	color: whitesmoke;
	margin-top: 50px;
}

.dashboard-content-btn .subscribe-button:hover {
	color: #E7E7E7;
}

.dashboard-content-btn .subscribe-button:active {
	color: #E7E7E7;
}

.dashboard-content-btn button:hover {
	border-color: #346392;
	color: #346392;
}

.dashboard-content-btn button:active {
	border-color: #27496d;
	color: #27496d;
}

.dashboard-content .row {
	margin-top: 5px;
	margin-bottom: 5px;
}

.tooltip.parent-module-tooltip .tooltip-inner {
	background-color: #04435e;
	margin: 20px 0px;
	padding: 15px;
	box-sizing: border-box;
	font-family: 'WeblySleek UI Semibold', sans-serif;
	width: 180px;
}
/* ... */

